--- a/photos/templates/photo/album.html
+++ b/photos/templates/photo/album.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 <!--Небольшой jQuery скриптик для выделения изображений при наведении курсора.
-Просто цвет блока становиться белым и появляется название.-->
+Просто цвет блока становиться белым и появляется названиеkgk.-->
 
 {% block script %}
     <script type="text/javascript">
